<resources>
    <string name="app_name">Formulario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guionMedio">-</string>
    <string name="tvEdad">Edad:</string>
    <string name="tvNombre">Nombre:</string>
    <string name="tvSignoZodiacal">Signo zodiacal:</string>
    <string name="signo_horoscopo_chino">Signo horoscopo chino:</string>
    <string name="carrera">Carrera:</string>
    <string name="numero_de_cuenta">Numero de cuenta:</string>
    <string name="correo">Correo:</string>
    <string name="numCuentaEjemplo">418045725</string>
    <string name="signoChinoEjemplo">Tigre</string>
    <string name="edgar_tobon_sosa">Edgar Tobon Sosa</string>
    <string name="_24_a_os_cumplidos">24 años cumplidos</string>
    <string name="escorpio">Escorpio</string>
    <string name="ingenieria_mecatr_nica">Ingenieria Mecatrónica</string>
    <string name="ingresa_tu_informaci_n">Ingresa tu información</string>
    <string name="siguiente">Siguiente</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="numero_de_cuenta_1">Numero de cuenta</string>
    <string name="selecciona_tu_ingenieria">Selecciona tu Ingenieria</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresa_tu_fecha_de_nacimento">Ingresa tu fecha de nacimento</string>
    <string name="d_a">Día</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>
    <string name="HelperNombre">Nombre y Apellido(s)</string>
    <string name="helpercorreo">Cualquier dominio</string>
    <string name="helperNumCuenta">9 Digitos</string>

    <!--SIGNO CHINO-->

    <string name="MONO">MONO</string>
    <string name="GALLO">GALLO</string>
    <string name="PERRO">PERRO</string>
    <string name="CERDO">CERDO</string>
    <string name="RATA">RATA</string>
    <string name="BUEY">BUEY</string>
    <string name="TIGRE">TIGRE</string>
    <string name="CONEJO">CONEJO</string>
    <string name="DRAGON">DRAGÓN</string>
    <string name="SERPIENTE">SERPIENTE</string>
    <string name="CABALLO">CABALLO</string>
    <string name="CABRA">CABRA</string>


    <!--SIGNO ZODIACO-->

    <string name="ARIES">ARIES</string>
    <string name="CANCER">CANCER</string>
    <string name="CAPRICORNIO">CAPRICORNIO</string>
    <string name="ESCORPIO">ESCORPIO</string>
    <string name="GEMINIS">GEMINIS</string>
    <string name="LEO">LEO</string>
    <string name="LIBRA">LIBRA</string>
    <string name="PISCIS">PISCIS</string>
    <string name="SAGRITARIO">SAGITARIO</string>
    <string name="TAURO">TAURO</string>
    <string name="VIRGO">VIRGO</string>
    <string name="ACUARIO">ACUARIO</string>


    <!--MESES AÑO-->

    <string name="ENERO">Enero</string>
    <string name="FEBRERO">Febrero</string>
    <string name="MARZO">Marzo</string>
    <string name="ABRIL">Abril</string>
    <string name="MAYO">Mayo</string>
    <string name="JUNIO">Junio</string>
    <string name="JULIO">Julio</string>
    <string name="AGOSTO">Agosto</string>
    <string name="SEPTIEMBRE">Septiembre</string>
    <string name="OCTUBRE">Octubre</string>
    <string name="NOVIEMBRE">Noviembre</string>
    <string name="DICIEMBRE">Diciembre</string>
    <!--TOAST-->
    <string name="ToasNaciemiento">Ingrese su fecha de nacimiento</string>
    <string name="toast_ingenieria">Seleccione la ingeniería que estudia</string>
    <string name="toast_cuenta">Ingresa un numero de cuenta valido</string>
    <string name="toast_correo">Ingresa un correo electronico valido</string>
    <string name="toast_nombre">Ingresa tu nombre</string>
    <string name="toas_nombre">Ingresa tu nombre</string>
    <string name="toast_date">La fecha no es valida</string>

    <!--CARRERAS FI-->
    <string name="AEROESPACIAL">Ingeniería Aeroespacial</string>
    <string name="CIVIL">Ingenieria Civil</string>
    <string name="GEOMATICA">Ingeniería Geomática</string>
    <string name="AMBIENTAL">Ingeniería Ambiental</string>
    <string name="GEOFISICA">Ingeniería Geofísica</string>
    <string name="GEOLOGICA">Ingeniería Geológica</string>
    <string name="PETROLERA">Ingeniería Petrolera</string>
    <string name="MINAS_METALURGIA">Ingeniería de Minas y Metalurgia</string>
    <string name="COMPUTACION">Ingeniería en Computación</string>
    <string name="ELECTRICA_ELECTRONICA">Ingeniería Eléctrica Electrónica</string>
    <string name="TELECOMUNICACIONES">Ingeniería en Telecomunicaciones</string>
    <string name="MECANICA">Ingeniería Mecánica</string>
    <string name="INDUSTRIAL">Ingeniería Industrial</string>
    <string name="MECATRONICA">Ingeniería Mecatrónica</string>
    <string name="SISTEMAS_BIOMEDICOS">Ingeniería en Sistemas Biomédicos</string>
    <string name="años_cumplidos">años cumplidos</string>
    <string name="año_cumplido">año cumplido</string>
    <string name="Resultado">Resultados</string>
    <string name="Formulario">Formulario</string>
    <string name="cumpleas">Cumpleaños</string>
    <string name="cumple">Cumpleaños</string>
    <string name="cumplea_os">Cumpleaños</string>


</resources>